Don't clear newly created tile, provide dedicated method for it
Clearing every tile on creation is unnecessary, as it may be filled with
other data right away (e.g. in ttip_loadpng). Now it can be done
explicitely when needed.

This saves ~1.5% CPU time for tiletool which is otherwise wasted in memset().

--- a/libttip/CMakeLists.txt
+++ b/libttip/CMakeLists.txt
@@ -26,6 +26,7 @@ SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra")
 # sources
 SET(TTIP_SRCS
 	basic.c
+	fill.c
 	png.c
 	pixel.c
 	tr_desaturate.c
