Handle err.h functions on windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,11 +14,23 @@ INCLUDE_DIRECTORIES(${TTIP_INCLUDE_DIRS})
 
 SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra")
 
-IF(NOT WIN32)
-	ADD_DEFINITIONS(-DHAVE_FORK)
-ENDIF(NOT WIN32)
-
 ADD_DEFINITIONS(-std=c99)
+
+INCLUDE(CheckFunctionExists)
+INCLUDE(CheckIncludeFile)
+
+CHECK_FUNCTION_EXISTS(fork HAVE_FORK)
+CHECK_INCLUDE_FILE(err.h HAVE_ERR_H)
+
+IF(HAVE_FORK)
+	ADD_DEFINITIONS(-DHAVE_FORK)
+ENDIF(HAVE_FORK)
+IF(NOT HAVE_ERR_H)
+	INCLUDE_DIRECTORIES(compat) # err.h compatibility for windows/mingw
+ENDIF(NOT HAVE_ERR_H)
+IF(WIN32)
+	SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -mconsole")
+ENDIF(WIN32)
 
 # sources
 SET(TILETOOL_SRCS
