--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,4 @@ addons:
     packages:
     - cmake
 script:
-  - cmake -DCMAKE_CXX_FLAGS="-Werror" .
-  - VERBOSE=1 make && make test
+  - mkdir build && cd build && cmake -DCMAKE_CXX_FLAGS="-Werror" .. && make && make test
