Move some chunks into child CMakeLists.txt, allow insource build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,52 +34,18 @@ SET(TILECONVERT_SRCS
 	tileconvert/tileconvert.c
 )
 
-# targets
-ADD_EXECUTABLE(tiletool ${TILETOOL_SRCS})
-TARGET_LINK_LIBRARIES(tiletool ${TTIP_LIBRARIES})
-INSTALL(TARGETS tiletool RUNTIME DESTINATION bin)
+# subdirs
+ADD_SUBDIRECTORY(tiletool)
+ADD_SUBDIRECTORY(tileconvert)
 
-ADD_EXECUTABLE(tileconvert ${TILECONVERT_SRCS})
-TARGET_LINK_LIBRARIES(tileconvert ${TTIP_LIBRARIES})
-INSTALL(TARGETS tileconvert RUNTIME DESTINATION bin)
-
-# tests
 IF(WITH_TESTS)
-	ENABLE_TESTING()
-
-	# libttip tests
-	ADD_EXECUTABLE(createdestroy_test tests/createdestroy.c)
-	TARGET_LINK_LIBRARIES(createdestroy_test ${TTIP_LIBRARIES})
-	ADD_TEST(createdestroy createdestroy_test)
-
-	ADD_EXECUTABLE(pngio_test tests/pngio.c)
-	TARGET_LINK_LIBRARIES(pngio_test ${TTIP_LIBRARIES})
-	ADD_TEST(pngio pngio_test)
-
-	ADD_EXECUTABLE(errors_test tests/errors.c)
-	TARGET_LINK_LIBRARIES(errors_test ${TTIP_LIBRARIES})
-	ADD_TEST(errors errors_test)
-
-	# tiletool internals tests
-	INCLUDE_DIRECTORIES(tiletool)
-
-	ADD_EXECUTABLE(parsing_test tests/parsing.c tiletool/parsing.c)
-	ADD_TEST(parsing parsing_test)
-
-	ADD_EXECUTABLE(bounds_test tests/bounds.c tiletool/bounds.c tiletool/parsing.c)
-	ADD_TEST(bounds bounds_test)
-
-	ADD_EXECUTABLE(paths_test tests/paths.c tiletool/paths.c)
-	ADD_TEST(paths paths_test)
-
-	ADD_EXECUTABLE(process_test tests/process.c tiletool/process.c)
-	ADD_TEST(process process_test)
+	ADD_SUBDIRECTORY(tests)
 ENDIF(WITH_TESTS)
 
 # benchmark
 MATH(EXPR BENCHMARK_LESS_ITERATIONS ${BENCHMARK_ITERATIONS}/10)
 
-SET(BENCHMARK_BIN ${CMAKE_CURRENT_BINARY_DIR}/tileconvert)
+SET(BENCHMARK_BIN ${CMAKE_CURRENT_BINARY_DIR}/tileconvert/tileconvert)
 
 ADD_CUSTOM_TARGET(benchmark
 	COMMAND echo "Benchmarking image operations \\(${BENCHMARK_ITERATIONS} iterations\\)..."
