--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,6 @@ addons:
     packages:
     - cmake
 script:
-  - mkdir build && cd build && cmake -DCMAKE_CXX_FLAGS="-Werror" .. && make && make test
+  - cmake -DCMAKE_CXX_FLAGS="-Werror" .
+  - make
+  - make test
